--- a/03_distillbert_classification with attention mask.ipynb
+++ b/03_distillbert_classification with attention mask.ipynb
@@ -114,6 +114,9 @@
     }
    ],
    "source": [
+    "kaggle=False\n",
+    "\n",
+    "\n",
     "from transformers import DistilBertTokenizer, DistilBertModel\n",
     "import torch\n",
     "import pandas as pd\n",
@@ -122,7 +125,9 @@
     "\n",
     "tokenizer = DistilBertTokenizer.from_pretrained('distilbert-base-cased')\n",
     "\n",
-    "df=pd.read_csv('clickbait_data.csv')\n",
+    "path='/kaggle/input/clickbait-dataset/clickbait_data.csv' if kaggle else 'clickbait_data.csv'\n",
+    "\n",
+    "df=pd.read_csv(path)\n",
     "df"
    ]
   },
