--- a/03_distillbert_classification with attention mask.ipynb
+++ b/03_distillbert_classification with attention mask.ipynb
@@ -277,6 +277,7 @@
     "                print(\"batch: {}\".format(batch_count))\n",
     "                xb=xb.to(self.device)\n",
     "                yb=yb.to(self.device)\n",
+    "                att_mask=att_mask.to(self.device)\n",
     "                pred=self.model(xb, attention_mask=att_mask)\n",
     "                loss=self.loss_fn(pred, yb)\n",
     "                self.run[\"train_loss\"].log(loss.item())\n",
