--- a/03_distillbert_classification with attention mask.ipynb
+++ b/03_distillbert_classification with attention mask.ipynb
@@ -288,10 +288,11 @@
     "            # log current state to neptune\n",
     "            with torch.no_grad():\n",
     "                valid_loss=0\n",
-    "                for xb, yb in self.valid_dataloader:\n",
+    "                for xb, yb, att_mask in self.valid_dataloader:\n",
     "                    xb=xb.to(self.device)\n",
     "                    yb=yb.to(self.device)\n",
-    "                    pred=self.model(xb)\n",
+    "                    att_mask=att_mask.to(self.device)\n",
+    "                    pred=self.model(xb, attention_mask=att_mask)\n",
     "                    loss=self.loss_fn(pred, yb)\n",
     "                    valid_loss+=loss.item()\n",
     "                print(\"epoch: {}, valid_loss: {}\".format(epoch, valid_loss/len(self.valid_dataloader)))\n",
@@ -301,10 +302,11 @@
     "        self.model.eval()\n",
     "        with torch.no_grad():\n",
     "            correct=0\n",
-    "            for xb, yb in self.valid_dataloader:\n",
+    "            for xb, yb, att_mask in self.valid_dataloader:\n",
     "                xb=xb.to(self.device)\n",
     "                yb=yb.to(self.device)\n",
-    "                pred=self.model(xb)\n",
+    "                att_mask=att_mask.to(self.device)\n",
+    "                pred=self.model(xb, attention_mask=att_mask)\n",
     "                pred=torch.argmax(pred, dim=1)\n",
     "                correct+=torch.sum(pred==yb).item()\n",
     "            return correct/len(valid_dataset)"
