temp remove neptune

--- a/03_distillbert_classification with attention mask.ipynb
+++ b/03_distillbert_classification with attention mask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "[32000 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-multilingual-cased were not used when initializing DistilBertModel: ['vocab_transform.weight', 'vocab_projector.weight', 'vocab_transform.bias', 'vocab_layer_norm.bias', 'vocab_layer_norm.weight', 'vocab_projector.bias']\n",
+      "Some weights of the model checkpoint at distilbert-base-multilingual-cased were not used when initializing DistilBertModel: ['vocab_projector.bias', 'vocab_transform.bias', 'vocab_layer_norm.weight', 'vocab_layer_norm.bias', 'vocab_transform.weight', 'vocab_projector.weight']\n",
       "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,20 +285,20 @@
     "            self.device=torch.device(\"mps\")\n",
     "\n",
     "        self.model.to(self.device)\n",
-    "        self.run=neptune.init_run(\n",
-    "            project=\"bernd.heidemann/clickbait-classification\",\n",
-    "            api_token=\"eyJhcGlfYWRkcmVzcyI6Imh0dHBzOi8vYXBwLm5lcHR1bmUuYWkiLCJhcGlfdXJsIjoiaHR0cHM6Ly9hcHAubmVwdHVuZS5haSIsImFwaV9rZXkiOiIzNjBlYzVkNi0zZTUwLTQ1ODYtODhlNC02NDUxNDg0MDdjNzUifQ==\",\n",
-    "        )\n",
+    "        #self.run=neptune.init_run(\n",
+    "        #    project=\"bernd.heidemann/clickbait-classification\",\n",
+    "        #    api_token=\"eyJhcGlfYWRkcmVzcyI6Imh0dHBzOi8vYXBwLm5lcHR1bmUuYWkiLCJhcGlfdXJsIjoiaHR0cHM6Ly9hcHAubmVwdHVuZS5haSIsImFwaV9rZXkiOiIzNjBlYzVkNi0zZTUwLTQ1ODYtODhlNC02NDUxNDg0MDdjNzUifQ==\",\n",
+    "        #)\n",
     "        self.batch_size=batch_size\n",
     "        self.train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=self.batch_size, shuffle=True)\n",
     "        self.valid_dataloader = torch.utils.data.DataLoader(valid_dataset, batch_size=self.batch_size, shuffle=True)\n",
     "\n",
     "    def fit(self, lr=0.001, epochs=10):\n",
-    "        self.run[\"parameters\"] = {\n",
-    "            \"lr\": lr,\n",
-    "            \"epochs\": epochs,\n",
-    "            \"batch_size\": self.batch_size,\n",
-    "        }\n",
+    "        #self.run[\"parameters\"] = {\n",
+    "        #    \"lr\": lr,\n",
+    "        #    \"epochs\": epochs,\n",
+    "        #    \"batch_size\": self.batch_size,\n",
+    "        #}\n",
     "        for epoch in range(epochs):\n",
     "            self.model.train()\n",
     "\n",
@@ -311,7 +311,7 @@
     "                att_mask=att_mask.to(self.device)\n",
     "                pred=self.model(xb, attention_mask=att_mask)\n",
     "                loss=self.loss_fn(pred, yb)\n",
-    "                self.run[\"train_loss\"].log(loss.item())\n",
+    "                #self.run[\"train_loss\"].log(loss.item())\n",
     "                loss.backward()\n",
     "                self.optimizer.step()\n",
     "                self.optimizer.zero_grad()\n",
@@ -327,7 +327,7 @@
     "                    loss=self.loss_fn(pred, yb)\n",
     "                    valid_loss+=loss.item()\n",
     "                print(\"epoch: {}, valid_loss: {}\".format(epoch, valid_loss/len(self.valid_dataloader)))\n",
-    "                self.run[\"valid_loss\"].log(valid_loss/len(self.valid_dataloader))\n",
+    "                #self.run[\"valid_loss\"].log(valid_loss/len(self.valid_dataloader))\n",
     "                \n",
     "    def get_accuracy(self):\n",
     "        self.model.eval()\n",
@@ -345,20 +345,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://app.neptune.ai/bernd.heidemann/clickbait-classification/e/CLIC-32\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8513c54b59ae403b950184211b996c17",
+       "model_id": "f1be25d65cb845eab8908bc0d42e3778",
        "version_major": 2,
        "version_minor": 0
       },
