--- a/02_distillbert_classification.ipynb
+++ b/02_distillbert_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "[32000 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,6 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        text=self.df.iloc[idx]['headline']\n",
-    "\n",
     "\n",
     "        input_ids = tokenizer.encode(text, add_special_tokens=True)\n",
     "        if (len(input_ids)<SEQ_LEN):\n",
@@ -175,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-multilingual-cased were not used when initializing DistilBertModel: ['vocab_transform.bias', 'vocab_projector.bias', 'vocab_projector.weight', 'vocab_layer_norm.bias', 'vocab_transform.weight', 'vocab_layer_norm.weight']\n",
+      "Some weights of the model checkpoint at distilbert-base-multilingual-cased were not used when initializing DistilBertModel: ['vocab_layer_norm.bias', 'vocab_layer_norm.weight', 'vocab_transform.weight', 'vocab_transform.bias', 'vocab_projector.weight', 'vocab_projector.bias']\n",
       "- This IS expected if you are initializing DistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -204,12 +203,11 @@
     "        super().__init__()\n",
     "        self.model = DistilBertModel.from_pretrained('distilbert-base-multilingual-cased')\n",
     "        self.linear = torch.nn.Linear(768, 2)\n",
-    "        self.maxpool=torch.nn.MaxPool1d(SEQ_LEN)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        output = self.model(x)[\"last_hidden_state\"]\n",
-    "        pooled_output = torch.mean(output, dim=1)\n",
-    "        output = self.linear(pooled_output)\n",
+    "        output = self.model(x)[\"last_hidden_state\"]   # shape (batch_size, seq_len, 768)\n",
+    "        pooled_output = torch.mean(output, dim=1)     # shape (batch_size, 768)\n",
+    "        output = self.linear(pooled_output)           # shape (batch_size, 2)\n",
     "        return output\n",
     "    \n",
     "my_model=Classifier()\n",
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,10 +259,8 @@
     "        for epoch in range(epochs):\n",
     "            self.model.train()\n",
     "            batch_count=0\n",
-    "            print(\"batches: \", len(self.train_dataloader))\n",
     "            for xb, yb in self.train_dataloader:\n",
     "                batch_count+=1\n",
-    "                print(\"batch: {}\".format(batch_count))\n",
     "                xb=xb.to(self.device)\n",
     "                yb=yb.to(self.device)\n",
     "                pred=self.model(xb)\n",
@@ -303,22 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/yl/qjs6b9wn4zx7nh630c4my9lw0000gn/T/ipykernel_14042/114391888.py:18: NeptuneWarning: The following monitoring options are disabled by default in interactive sessions: 'capture_stdout', 'capture_stderr', 'capture_traceback', and 'capture_hardware_metrics'. To enable them, set each parameter to 'True' when initializing the run. The monitoring will continue until you call run.stop() or the kernel stops. Also note: Your source files can only be tracked if you pass the path(s) to the 'source_code' argument. For help, see the Neptune docs: https://docs.neptune.ai/logging/source_code/\n",
-      "  self.run=neptune.init_run(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://app.neptune.ai/bernd.heidemann/clickbait-classification/e/CLIC-17\n",
+      "https://app.neptune.ai/bernd.heidemann/clickbait-classification/e/CLIC-122\n",
       "batches:  200\n",
       "batch: 1\n",
       "batch: 2\n",
@@ -397,130 +385,21 @@
       "batch: 75\n",
       "batch: 76\n",
       "batch: 77\n",
-      "batch: 78\n",
-      "batch: 79\n",
-      "batch: 80\n",
-      "batch: 81\n",
-      "batch: 82\n",
-      "batch: 83\n",
-      "batch: 84\n",
-      "batch: 85\n",
-      "batch: 86\n",
-      "batch: 87\n",
-      "batch: 88\n",
-      "batch: 89\n",
-      "batch: 90\n",
-      "batch: 91\n",
-      "batch: 92\n",
-      "batch: 93\n",
-      "batch: 94\n",
-      "batch: 95\n",
-      "batch: 96\n",
-      "batch: 97\n",
-      "batch: 98\n",
-      "batch: 99\n",
-      "batch: 100\n",
-      "batch: 101\n",
-      "batch: 102\n",
-      "batch: 103\n",
-      "batch: 104\n",
-      "batch: 105\n",
-      "batch: 106\n",
-      "batch: 107\n",
-      "batch: 108\n",
-      "batch: 109\n",
-      "batch: 110\n",
-      "batch: 111\n",
-      "batch: 112\n",
-      "batch: 113\n",
-      "batch: 114\n",
-      "batch: 115\n",
-      "batch: 116\n",
-      "batch: 117\n",
-      "batch: 118\n",
-      "batch: 119\n",
-      "batch: 120\n",
-      "batch: 121\n",
-      "batch: 122\n",
-      "batch: 123\n",
-      "batch: 124\n",
-      "batch: 125\n",
-      "batch: 126\n",
-      "batch: 127\n",
-      "batch: 128\n",
-      "batch: 129\n",
-      "batch: 130\n",
-      "batch: 131\n",
-      "batch: 132\n",
-      "batch: 133\n",
-      "batch: 134\n",
-      "batch: 135\n",
-      "batch: 136\n",
-      "batch: 137\n",
-      "batch: 138\n",
-      "batch: 139\n",
-      "batch: 140\n",
-      "batch: 141\n",
-      "batch: 142\n",
-      "batch: 143\n",
-      "batch: 144\n",
-      "batch: 145\n",
-      "batch: 146\n",
-      "batch: 147\n",
-      "batch: 148\n",
-      "batch: 149\n",
-      "batch: 150\n",
-      "batch: 151\n",
-      "batch: 152\n",
-      "batch: 153\n",
-      "batch: 154\n",
-      "batch: 155\n",
-      "batch: 156\n",
-      "batch: 157\n",
-      "batch: 158\n",
-      "batch: 159\n",
-      "batch: 160\n",
-      "batch: 161\n",
-      "batch: 162\n",
-      "batch: 163\n",
-      "batch: 164\n",
-      "batch: 165\n",
-      "batch: 166\n",
-      "batch: 167\n",
-      "batch: 168\n",
-      "batch: 169\n",
-      "batch: 170\n",
-      "batch: 171\n",
-      "batch: 172\n",
-      "batch: 173\n",
-      "batch: 174\n",
-      "batch: 175\n",
-      "batch: 176\n",
-      "batch: 177\n",
-      "batch: 178\n",
-      "batch: 179\n",
-      "batch: 180\n",
-      "batch: 181\n",
-      "batch: 182\n",
-      "batch: 183\n",
-      "batch: 184\n",
-      "batch: 185\n",
-      "batch: 186\n",
-      "batch: 187\n",
-      "batch: 188\n",
-      "batch: 189\n",
-      "batch: 190\n",
-      "batch: 191\n",
-      "batch: 192\n",
-      "batch: 193\n",
-      "batch: 194\n",
-      "batch: 195\n",
-      "batch: 196\n",
-      "batch: 197\n",
-      "batch: 198\n",
-      "batch: 199\n",
-      "batch: 200\n",
-      "epoch: 0, valid_loss: 0.05499405157752335\n"
+      "batch: 78\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m learner\u001b[38;5;241m=\u001b[39mLearner(my_model, optimizer, loss_fn, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m128\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[43mlearner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.0001\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[11], line 44\u001b[0m, in \u001b[0;36mLearner.fit\u001b[0;34m(self, lr, epochs)\u001b[0m\n\u001b[1;32m     42\u001b[0m loss\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mloss_fn(pred, yb)\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrun[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain_loss\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mlog(loss\u001b[38;5;241m.\u001b[39mitem())\n\u001b[0;32m---> 44\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniconda/base/envs/torch_ds/lib/python3.10/site-packages/torch/_tensor.py:488\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    478\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    479\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    480\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    481\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    486\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    487\u001b[0m     )\n\u001b[0;32m--> 488\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    489\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    490\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniconda/base/envs/torch_ds/lib/python3.10/site-packages/torch/autograd/__init__.py:204\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    199\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    201\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    202\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    203\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 204\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    205\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    206\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -531,16 +410,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.98171875"
+       "0.975"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
